--- a/sqlapp/Pages/Index.cshtml
+++ b/sqlapp/Pages/Index.cshtml
@@ -9,9 +9,9 @@
     <table class="table table-bordered">
   <thead>
     <tr>
-      <th scope="col">Product ID</th>
-      <th scope="col">Product Name</th>
-      <th scope="col">Quantity</th>      
+      <th scope="col">Product Id</th>
+      <th scope="col">Product Description</th>
+      <th scope="col">Quantity (in Stock)</th>      
     </tr>
   </thead>
    <tbody>
